--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ select { -webkit-appearance: none; appearance: none; }
         <a href="#capabilities" class="hover:text-white transition-colors text-sm font-normal text-white/80 pt-2 pr-3 pb-2 pl-3">Capabilities</a>
         <a href="#profile" class="hover:text-white transition-colors text-sm font-normal text-white/80 pt-2 pr-3 pb-2 pl-3">Who We
           Serve</a>
-        
+
         <div class="relative inline-block group text-xs rounded-full">
           <a href="#application" class="animate-[slideInBlur_0.8s_ease-out_1.2s_forwards] relative z-10 overflow-hidden transition-[transform] duration-150 ease-out active:scale-[0.98] text-white bg-neutral-900/60 border-white/20 border pt-3 pr-6 pb-3 pl-6 shadow-[inset_0_1px_0_rgba(255,255,255,0.08)] text-xs rounded-full cursor-pointer inline-flex">
             <span class="z-10 inline-flex items-center gap-2 cursor-pointer text-xs font-medium rounded-full relative" role="button">Contact Us</span>
@@ -123,16 +123,16 @@ select { -webkit-appearance: none; appearance: none; }
       <h1 class="sm:text-6xl md:text-7xl [animation:fadeSlideIn_1s_ease-out_0.2s_forwards] text-4xl font-semibold tracking-tighter font-manrope opacity-0 max-w-5xl mr-auto ml-auto">
         Scale with Strategy. </h1>
       <p class="sm:text-lg [animation:fadeSlideIn_1s_ease-out_0.3s_both] leading-relaxed text-base font-normal text-white/70 max-w-3xl mt-6 mr-auto ml-auto">
-        <span class="block text-center">We build the High-Fidelity Content that institutional investors demand. By combining elite narrative design with cinema-grade production, we help you command higher multiples and eliminate information asymmetry.</span>
+        <span class="block text-center">We build your world-class marketing engine that get you funded.</span>
 
       </p>
       <div class="flex flex-col sm:flex-row [animation:fadeSlideIn_1s_ease-out_0.4s_both] mt-10 gap-x-3 gap-y-3 items-center justify-center">
         <a href="#application" class="group relative inline-flex min-w-[140px] cursor-pointer transition-all duration-[1000ms] ease-[cubic-bezier(0.15,0.83,0.66,1)] hover:-translate-y-[3px] hover:text-white shadow-[0_2.8px_2.2px_rgba(0,0,0,0.3),_0_6.7px_5.3px_rgba(0,0,0,0.35),_0_12.5px_10px_rgba(0,0,0,0.4)] overflow-hidden font-semibold text-neutral-400 tracking-tight bg-neutral-800 border-neutral-600 border rounded-full pt-[12px] pr-[20px] pb-[12px] pl-[20px] items-center justify-center">
           <span class="relative z-10 font-medium rounded-full transition-all duration-500 ease-out group-hover:transform group-hover:translate-y-8 group-hover:opacity-0 group-hover:blur-md font-sans">Schedule Strategy Session</span>
-          <span class="z-10 flex items-center justify-center transition-all duration-300 ease-in-out transform -translate-y-8 group-hover:translate-y-0 group-hover:opacity-100 group-hover:blur-none cursor-pointer font-medium opacity-0 rounded-full absolute top-0 right-0 bottom-0 left-0 blur-md" role="button" onclick="window.location.href='/mailto:maciej@cmgp.ch?subject=Schedule%20Strategy%20Session'">Schedule Now</span>
+          <span class="flex items-center justify-center transition-all duration-300 ease-in-out transform -translate-y-8 group-hover:translate-y-0 group-hover:opacity-100 group-hover:blur-none cursor-pointer font-medium opacity-0 z-10 rounded-full absolute top-0 right-0 bottom-0 left-0 blur-md" role="button" onclick="window.location.href='/mailto:maciej@cmgp.ch?subject=Schedule%20Strategy%20Session';window.location.href='/mailto:maciej@cmgp.ch?subject=Schedule%20Strategy%20Session';window.location.href='/mailto:maciej@cmgp.ch?subject=Schedule%20Strategy%20Session';window.location.href='/mailto:maciej@cmgp.ch?subject=Schedule%20Strategy%20Session';window.location.href='/home'">Schedule Now</span>
           <span aria-hidden="true" class="absolute bottom-0 left-1/2 h-[1px] w-[70%] -translate-x-1/2 transition-all duration-[1000ms] ease-[cubic-bezier(0.15,0.83,0.66,1)] group-hover:opacity-80 bg-gradient-to-r from-transparent via-neutral-200 to-transparent rounded-full blur-[2px]"></span>
         </a>
-        <a href="/home" class="inline-flex items-center gap-2 hover:bg-white/10 text-base font-medium text-white/90 bg-white/5 border-white/10 border rounded-full pt-3 pr-6 pb-3 pl-6 backdrop-blur">
+        <a href="/manifesto" class="inline-flex items-center gap-2 hover:bg-white/10 text-base font-medium text-white/90 bg-white/5 border-white/10 border rounded-full pt-3 pr-6 pb-3 pl-6 backdrop-blur">
           Core Capabilities
         </a>
       </div>
@@ -148,7 +148,7 @@ select { -webkit-appearance: none; appearance: none; }
         What We Do</p>
       <h2 class="sm:text-4xl md:text-5xl [animation:fadeSlideIn_1s_ease-out_0.2s_both] animate-on-scroll animate text-3xl font-semibold tracking-tighter font-manrope mt-3">
         The CMGP Approach</h2>
-      <p class="[animation:fadeSlideIn_1s_ease-out_0.3s_both] animate-on-scroll animate text-base text-white/70 max-w-xl mt-4">We give global investors the visual proof they need to trust Your vision, shorten their diligence, and value your business at a premium.</p>
+      <p class="[animation:fadeSlideIn_1s_ease-out_0.3s_both] animate-on-scroll animate text-base text-white/70 max-w-2xl mt-4">We create the strategic narrative and visual proof that help investors trust your vision, accelerate due diligence, and value your business at a premium.</p>
     </div>
   </div>
 
@@ -213,7 +213,7 @@ select { -webkit-appearance: none; appearance: none; }
 </section>
 
 <!-- 2. WHO WE PARTNER WITH -->
-<section id="profile" class="z-10 overflow-hidden w-full pt-16 pb-32 relative">
+<section class="z-10 overflow-hidden w-full pt-16 pb-32 relative" id="profile">
     <!-- Background Gradient/Glow Effect -->
     <div class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-[600px] h-[400px] bg-emerald-500/5 blur-[120px] rounded-full -z-10 pointer-events-none"></div>
 
@@ -236,7 +236,7 @@ select { -webkit-appearance: none; appearance: none; }
 
             <!-- Item 01 -->
             <div class="relative z-10 flex flex-col items-center text-center animate-on-scroll animate group">
-                <div class="w-16 h-16 rounded-full bg-black border border-white/10 flex items-center justify-center mb-8 relative z-10 shadow-[0_0_15px_rgba(0,0,0,0.5)] transition-all duration-300 group-hover:border-emerald-500/30 group-hover:shadow-[0_0_20px_rgba(16,185,129,0.15)]">
+                <div class="flex z-10 transition-all duration-300 group-hover:border-emerald-500/30 group-hover:shadow-[0_0_20px_rgba(16,185,129,0.15)] bg-black w-16 h-16 border-white/10 border rounded-full mb-8 relative shadow-[0_0_15px_rgba(0,0,0,0.5)] items-center justify-center">
                     <span class="font-manrope text-lg font-semibold text-white/90">01</span>
                 </div>
                 <h3 class="text-xl font-medium text-white tracking-tight mb-3">Real Assets &amp; Infrastructure</h3>
@@ -270,7 +270,7 @@ select { -webkit-appearance: none; appearance: none; }
 </section>
 
 <!-- 3. APPLICATION FORM -->
-<section class="z-10 lg:py-32 overflow-hidden w-full pt-24 pb-24 relative" id="application">
+<section class="lg:py-32 overflow-hidden z-10 w-full pt-24 pb-24 relative" id="application">
     <!-- Background Glows -->
     <div class="absolute top-0 left-1/2 -translate-x-1/2 w-[600px] h-[500px] bg-orange-500/10 blur-[120px] rounded-full -z-10 pointer-events-none"></div>
     <div class="absolute bottom-0 right-0 w-[500px] h-[500px] bg-blue-600/5 blur-[120px] rounded-full -z-10 pointer-events-none"></div>
@@ -309,7 +309,7 @@ select { -webkit-appearance: none; appearance: none; }
                     <div class="space-y-2 relative">
                         <label class="text-sm text-white/50 font-medium block">Estimated Budget</label>
                         <div class="relative">
-                            <select class="w-full bg-white/5 border border-white/10 rounded-lg px-4 py-3 text-white text-sm appearance-none focus:outline-none focus:border-white/20 transition-colors cursor-pointer">
+                            <select class="appearance-none focus:outline-none focus:border-white/20 transition-colors cursor-pointer text-sm text-white bg-white/5 w-full border-white/10 border rounded-lg pt-3 pr-4 pb-3 pl-4">
                                 <option class="bg-neutral-900 text-white/40">Select Range</option>
                                 <option class="bg-neutral-900">$20k - $50k</option>
                                 <option class="bg-neutral-900">$50k - $100k</option>
